regression/fail/overloading-context.3.sml
val x = 0w0
signature S = sig end
val _ = x: Word8.word
